# INF1761-Computacao-Grafica

./: .gitignore  README.md  colinha-ambiente.txt  setup_env.bat  setup_env.ps1
2310822-envio-trab1/: relatorio.md
2310822-envio-trab1/src/: error.h  input_handlers.h  shader.h  shape.h
esqueleto/: CMakeLists.txt
esqueleto/shaders/: fragment.glsl  vertex.glsl
esqueleto/src/: PhysicsBodyFactory.h  circle.h  engine.h  error.h  esqueleto.cpp  generic2Dshape.h  generic_node.h  input_handlers.h  node_types.h  physicsBody.h  polygon.h  scene.h  shader.h  shape.h  transform.h  versao_gemini.cpp
esqueleto/src/shaders/: vertex.glsl
exerc1/: CMakeLists.txt
exerc1/libs/glad/include/glad/: gl.h
exerc1/shaders/: vertex.glsl
exerc1/src/: exerc1.cpp  notas.txt  quad.h  shape.h  versao_gemini.cpp
proj1/: CMakeLists.txt
proj1/shaders/: textured_fragment.glsl  textured_vertex.glsl  vertex.glsl
proj1/src/: proj1.cpp
proj1/src/physics/: engine.h  physicsBody.h
proj2/: CMakeLists.txt
proj2/shaders/: lit_vertex.glsl  n_map_fragment.glsl  n_map_vertex.glsl  phong.frag  phong.vert  sun.vert
proj2/src/: proj2.cpp
proj3/: CMakeLists.txt
proj3/shaders/: phong.frag  phong.vert  reflect.frag  reflect.vert  reflection.frag  reflection.vert  shadow.frag  shadow.vert  sun.frag
proj3/src/: proj3.cpp  proj3Reflex.cpp  proj3Shadow.cpp
test/: CMakeLists.txt
trab0/src/: test0-glfw.cpp
trab1/: CMakeLists.txt
trab1/envio/2310822-envio-trab1/src/: gl_includes.h  main.cpp
trab1/src/: drawing.h  error.h  generic2Dshape.h  input_handlers.h  main.cpp  polygon.h  scene.h  shader.h  triangulate.h
trab2/: CMakeLists.txt
trab2/src/: input_handlers.h  scene.h  shape.h  trab2.cpp  transform.h
trab21/: CMakeLists.txt
trab21/shaders/: fragment.glsl  lit_fragment.glsl  lit_vertex.glsl  textured_vertex.glsl  vertex.glsl
trab21/src/: trab21.cpp
trab21/src/physics/: engine.h  physicsBody.h
trab22/: CMakeLists.txt
trab22/shaders/: lit_fragment.glsl  n_map_fragment.glsl  n_map_vertex.glsl  textured_lit_fragment.glsl  textured_lit_vertex.glsl
trab22/src/: trab22.cpp
trab3/: CMakeLists.txt
trab3/src/: circle.h  scene.h  shader.h  shape.h  trab3.cpp  transform.h
